fixed z-index carousel

--- a/store/src/sass/header.scss
+++ b/store/src/sass/header.scss
@@ -4,6 +4,7 @@
 
 .header-wrapper {
   min-width: 320px;
+  
 }
 
 .main-header {
@@ -18,6 +19,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 .nav__section {
